--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h2>Projects</h2>
             <ul>
                 <li><strong><a href="https://github.com/Glebusssssss/Weather-app" target="_blank">Weather App</a></strong> - Built using JavaScript and OpenWeatherMap API.</li>
-                <li><strong>Portfolio Website</strong> - Responsive website showcasing projects and skills.</li>
+                <li><strong><a href="https://github.com/Glebusssssss/CV/blob/main/index.html" target="_blank">CV Project</a></strong> - A professional CV built with HTML, CSS, and JavaScript.</li>
             </ul>
         </section>
         
@@ -121,4 +121,3 @@
     </script>
 </body>
 </html>
-
